# stl-pinn-processor

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docker-build.yml  security-scan.yml
data/templates/: pinn_structural.py  pinn_thermal.py
deployment/docker/: Dockerfile  Dockerfile.dev  docker-entrypoint.sh
deployment/helm/: Chart.yaml  values.yaml
deployment/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
scripts/: docker-build.sh  generate-sample-data.py  migrate-db.py  run-tests.sh  setup.sh
src/api/: main.py
src/config/: settings.py
src/core/: base_processor.py  exceptions.py
src/models/: mesh_models.py
src/services/: llm_service.py  pinn_service.py  stl_processor.py  validation_service.py
src/utils/: geometry_utils.py  visualization_utils.py
